# ted

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  config.hpp.in
OLD/: MainPresenter.cpp  MainPresenter.hpp
include/: App.hpp  Core.hpp  Document.hpp  DocumentPanel.hpp  Editor.hpp  MainFrame.hpp  MainPresenter.hpp  MenuBar.hpp  Presenter.hpp  TextDocument.hpp
src/: App.cpp  Editor.cpp  Editor2.cpp  MainFrame.cpp  MainPresenter.cpp  MenuBar.cpp  TextDocument.cpp
